--- a/src/main/resources/templates/favorites.html
+++ b/src/main/resources/templates/favorites.html
@@ -8,7 +8,9 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo" onclick="window.location.href='/home'">SahilFlix</div>
+  <div class="logo">
+    <a href="/home" style="text-decoration: none; color: inherit;">SahilFlix</a>
+  </div>
   <div class="nav-links">
     <a href="/home">Trending</a>
     <a href="/favorites">Favorites</a>
